# solana-staking

./: Anchor.toml  package.json
programs/registry/: Cargo.toml
programs/registry/src/: account.rs  context.rs  error.rs  lib.rs
programs/staking-factory/: Cargo.toml
programs/staking-factory/src/: account.rs  context.rs  context_admin.rs  context_user.rs  error.rs  event.rs  lib.rs  reward.rs  state.rs
programs/staking-factory/src/instructions/: change_config.rs  claim_reward.rs  create_staking.rs  deposit.rs  end_unstake.rs  initialize.rs  mod.rs  register_member.rs  stake.rs  start_unstake.rs  withdraw.rs
tests/: api.ts  ctx.ts  index.ts  solana-donations.ts  staking-factory.ts  token.ts  utils.ts
